# libquassel

./: .gitremotes  Cargo.toml  README.md  flake.nix  rustfmt.toml
derive/: Cargo.toml
derive/src/: lib.rs
derive/src/from/: mod.rs
derive/src/network/: list.rs  map.rs  maplist.rs  mod.rs
derive/src/setters/: mod.rs
derive/src/sync/: mod.rs
examples/statetracker/: Cargo.toml
examples/statetracker/src/: aliasmanager.rs  command.rs  connect.rs  formatter.rs  main.rs  server.rs
src/: deserialize.rs  error.rs  lib.rs  serialize.rs  session.rs  util.rs
src/error/: mod.rs
src/frame/: mod.rs  tests.rs
src/message/: mod.rs
src/message/handshake/: clientinit.rs  clientinitack.rs  clientinitreject.rs  clientlogin.rs  clientloginack.rs  clientloginreject.rs  connack.rs  features.rs  init.rs  mod.rs  protocol.rs  sessioninit.rs  types.rs
src/message/signalproxy/: class.rs  heartbeat.rs  initdata.rs  initrequest.rs  mod.rs  rpccall.rs  syncmessage.rs  translation.rs
src/message/signalproxy/objects/: aliasmanager.rs  backlogmanager.rs  buffersyncer.rs  bufferviewconfig.rs  bufferviewmanager.rs  certmanager.rs  chanmodes.rs  coreinfo.rs  highlightrulemanager.rs  identity.rs  ignorelistmanager.rs  ircchannel.rs  ircuser.rs  mod.rs  network.rs  networkconfig.rs  networkinfo.rs
src/message/signalproxy/rpccall/: bufferinfo.rs  client.rs  identity.rs  message.rs  mod.rs  network.rs  objectrenamed.rs  passwordchange.rs
src/message/signalproxy/translation/: mod.rs
src/primitive/: bufferid.rs  bufferinfo.rs  datetime.rs  identityid.rs  message.rs  mod.rs  msgid.rs  networkid.rs  peerptr.rs  signedint.rs  string.rs  stringlist.rs  unsignedint.rs  variant.rs  variantlist.rs  variantmap.rs
src/primitive/datetime/: chrono.rs  mod.rs  time.rs
src/session/: mod.rs
