cargo-features = ["edition2021"]

[package]
name = "libquassel-derive"
version = "0.1.0"
authors = ["Max Audron <audron@cocaine.farm>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "derive"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.12"
