[package]
name = "statetracker"
version = "0.1.0"
edition = "2018"

[dependencies]
libquassel = { path = "../../", features = ["framing", "all-quassel-features"] }

# druid = "0.7"
druid = { git = "https://github.com/linebender/druid", features = ["im"] }
druid-widget-nursery = { path = "/home/audron/repo/github.com/linebender/druid-widget-nursery" }

anyhow = "*"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

byteorder = "1"
either = "1"
time = "0.2"
log = "*"

tokio = { version = "1", features = ["full", "rt-multi-thread"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-rustls = { version = "0.22" }

bytes = { version = "1" }
flate2 = { version = "1", features = ["tokio"] }
webpki-roots = { version = "0.21" }
futures-util = { version = "0.3", features = ["std"] }
futures = { version = "0.3" }
pretty_env_logger = { version = "0.4" }
